--- a/app/src/main/res/layout/fragment_design.xml
+++ b/app/src/main/res/layout/fragment_design.xml
@@ -190,7 +190,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:background="@drawable/ic_designs"
+                android:background="@drawable/ic_button"
                 android:layout_marginStart="24dp"
                 android:id="@+id/icon6"
                 />
@@ -222,7 +222,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:background="@drawable/ic_designs"
+                android:background="@drawable/ic_dashboard"
                 android:layout_marginStart="24dp"
                 android:id="@+id/icon7"
                 />
